# LogitechMouseControl

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  logi_joy_bus_enum.inf  logi_vhid.py  poc.py  setup_driver.py  setup_helper.py  setup_virtual_driver.py
examples/: automated_test.py  example_automation.py  example_basic.py
logi/: 驱动安装行为 APIMonitor.xml
logi/ida/: logi_joy_vir_hid.sys.c
logi/logi_joy_bus_enum/: logi_joy_bus_enum.sys.c  logi_joy_xlcore.sys.c
logi/logi_joy_vir_hid/: logi_joy_vir_hid.inf
patches/: winapi+0.3.9.patch
src/: constants.rs  device_discovery.rs  driver_manager.rs  embedded_driver.rs  hid_manager.rs  lib.rs  main.rs  types.rs  utils.rs
