[package]
name = "logi_vhid_manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "logi_vhid"
crate-type = ["cdylib", "rlib"] # 同时生成动态库和Rust库

[[bin]]
name = "logi_vhid_manager"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
walkdir = "2.5.0"

[dependencies.windows]
version = "0.62.1"
features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
]

[build-dependencies]
cargo-patch = "0.3"
