[package]
name = "logi_vhid_manager"
version = "0.1.0"
edition = "2021"
authors = ["foxxorcat"]
repository = "https://github.com/foxxorcat/LogitechMouseControl"
description = "调用罗技键鼠驱动创建和控制虚拟 HID 设备"

[lib]
name = "logi_vhid"
crate-type = ["cdylib", "rlib"] # 同时生成动态库和Rust库

[[bin]]
name = "logi_vhid_manager"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
include_dir = "0.7.4"
walkdir = "2.5.0"

[dependencies.windows]
version = "0.62.1"
features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Services",
]